# AI-Scientist-Formulation

./: README.md  README_zh.md  idea.md  repo_structure_draft.md  research_plan.md  slides.html  slides_compact.html
.cursor/plans/: ist_app_mvp_plan_2bece811.plan.md
app/backend/: README.md  pyproject.toml
app/backend/src/ccts_backend/: __init__.py  main.py  schemas.py  store.py
app/backend/src/ccts_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/backend/src/ccts_backend/domain/: __init__.py  ccts.py
app/backend/tests/: test_api.py  test_ccts.py
app/frontend/: README.md  index.html  package-lock.json  package.json
app/frontend/src/: api.js  main.jsx  styles.css
app/worker/: README.md  pyproject.toml
app/worker/src/ccts_worker/: __init__.py  mock_runner.py  worker_main.py
app/worker/src/ccts_worker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ist-app/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
ist-app/electron/: main.ts  preload.ts  store.ts
ist-app/electron/ipc/: aiHandlers.ts  fileHandlers.ts
ist-app/electron/services/ai/: AIService.ts
ist-app/shared/: types.ts
ist-app/src/: App.tsx  index.html  styles.css
ist-app/src/components/: DeleteConfirm.tsx
ist-app/src/components/Canvas/: Canvas.tsx  ConnectionLine.tsx  ExperimentNode.tsx  IdeaNode.tsx  TreeRenderer.tsx
ist-app/src/components/Settings/: AISettings.tsx
ist-app/src/layout/: treeLayout.ts
ist-app/src/store/: useTreeStore.ts  useUIStore.ts
(+2 files in other folders)
