[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccts-worker"
version = "0.1.0"
description = "Phase 1 MVP mock worker for CCTS runs."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
